Update header.css to fix logo alignment and add justify-content: space-around

--- a/assets/css/common/header.css
+++ b/assets/css/common/header.css
@@ -20,7 +20,8 @@
 }
 
 .logo {
-    flex-wrap: inherit;
+    flex-wrap: wrap-reverse;
+      justify-content: space-around;
 }
 
 .logo a {
